# RobotControl

./: .build.gradle.swp  .gitmodules  .gradle.properties.swp  build.gradle  gradle.properties  my-logs.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/railbot/usrc/robotcontrol/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  jniLibs
app/src/main/cpp/: CircularBuffer.cpp  CircularBuffer.h  Decoder.cpp  Def.h  Protocol.h  Socket.cpp  Socket.h  ir_viewer.cpp  ir_viewer.h  native-irViewer-lib.cpp  native-lib.cpp
app/src/main/java/com/: AudioChannel.java
app/src/main/java/com/railbot/usrc/robotcontrol/: AudioChannel.java  Client.java  ControlStickListener.java  Def.java  DeviceController.java  IR_SurfaceView.java  IR_Viewer.java  IR_ViewerListener.java  ItemsAdapter.java  ListItem.java  LockEditText.java  MainActivity.java  MakeCallActivity.java  MicThread.java  MsgSender.java  RailController.java  ReceiveCallActivity.java  ServerSettingsActivity.java  SoundPacket.java  SpeedUpdateListener.java  VideoActivity.java  VideoSurfaceView.java
app/src/main/java/com/railbot/usrc/robotcontrol/rvs/: AnimateMethod.java  RangeSliderView.java
app/src/main/java/com/usrc/railbot/voicechat/: Message.java  SoundPacket.java
app/src/main/res/drawable/: bg_base.xml  button_set.xml  calibrate.xml  move_back.xml  move_button.xml  move_bwd.xml  move_down.xml  move_front.xml  move_fwd.xml  move_sel.xml  move_stop.xml  move_up.xml  triangle_button.xml  triangle_rel.xml  triangle_sel.xml
app/src/main/res/layout/: activity_main.xml  activity_make_call.xml  activity_receive_call.xml  activity_server_settings.xml  activity_video.xml  main_list_item.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimen.xml  dimens.xml  strings.xml
app/src/main/res/values-b+ko/: strings.xml
app/src/test/java/com/railbot/usrc/robotcontrol/: ExampleUnitTest.java
bugstick/: build.gradle  local.properties
bugstick/gradle/wrapper/: gradle-wrapper.properties
bugstick/src/main/java/com/jmedeisis/bugstick/: Joystick.java
cam_viewer/: CMakeLists.txt  build.gradle
cam_viewer/src/main/cpp/: decode.c  player.h
cam_viewer/src/main/java/com/railbot/usrc/mediaplayer/: VideoPlayer.java
gradle/wrapper/: gradle-wrapper.properties
